--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@
     border: 0;
     outline: none;
     box-sizing: border-box;
+    background: transparent;
     font-family: inherit;
 }
 
@@ -61,6 +62,99 @@ body {
 }
 
 /* - - - - HEADER - - - - */
+.header {
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+
+    padding: 25px 0 12px;
+    background-color: var(--color-base-blue);
+
+    transition: padding .25s;
+}
+
+.header.active {
+    padding-top: 16px;
+    border-bottom: 1px solid var(--color-light-blue);
+}
+
+.demo {
+    height: 1000vh;
+}
+
+.navbar__container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 12px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    font-family: var(--body-font);
+}
+
+.navbar__container>.logo {
+    position: relative;
+
+}
+
+.logo>img {
+    height: 26px;
+}
+
+.logo-underline {
+    position: relative;
+    left: 42px;
+    bottom: 6px;
+
+    width: 14px;
+    height: 3px;
+
+    border-radius: 2px;
+
+    background-color: #0057FF;
+}
+
+.navigation-container {
+    position: absolute;
+    top: 62px;
+    left: 0;
+    width: 250px;
+    height: 100vh;
+
+    padding: 10px 10px;
+
+    transform: translateX(-266px);
+    background-color: rgba(236, 219, 186, 0.8);
+
+    transition: transform .5s ease-in;
+}
+
+.navigation-container.open {
+    transform: translateX(0px);
+}
+
+.navbar__list {
+    list-style: none;
+}
+
+.navbar__list-item {
+    color: var(--color-base-blue);
+    padding: 20px 0px 8px;
+    border-bottom: 6px solid transparent;
+
+    transition: .35s;
+}
+
+.navbar__list-item:hover {
+    font-weight: 600;
+    text-transform: capitalize;
+
+    padding-left: 10px;
+    border-bottom: 6px solid var(--color-full-yellow);
+}
+
 /* - - - - END HEADER - - - - */
 
 /* - - - - PORTFOLIO - - - - */
