--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ body {
     background-color: var(--color-base-blue);
 }
 
-/* - - - - HEADER - - - - */
+/* - - - - NAVIGATION - - - - */
 .header {
     position: fixed;
     width: 100%;
@@ -78,9 +78,6 @@ body {
     border-bottom: 1px solid var(--color-light-blue);
 }
 
-.demo {
-    height: 1000vh;
-}
 
 .navbar__container {
     max-width: 800px;
@@ -118,7 +115,7 @@ body {
 
 .navigation-container {
     position: absolute;
-    top: 62px;
+    top: 70px;
     left: 0;
     width: 250px;
     height: 100vh;
@@ -126,9 +123,13 @@ body {
     padding: 10px 10px;
 
     transform: translateX(-266px);
-    background-color: rgba(236, 219, 186, 0.8);
+    background-color: var(--color-light-yellow);
 
     transition: transform .5s ease-in;
+}
+
+.navigation-container.active {
+    top: 62px;
 }
 
 .navigation-container.open {
@@ -140,7 +141,7 @@ body {
 }
 
 .navbar__list-item {
-    color: var(--color-base-blue);
+    color: var(--color-hover-text);
     padding: 20px 0px 8px;
     border-bottom: 6px solid transparent;
 
@@ -155,9 +156,95 @@ body {
     border-bottom: 6px solid var(--color-full-yellow);
 }
 
-/* - - - - END HEADER - - - - */
+.hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+
+    width: 32px;
+    height: 32px;
+    transition: all .5s ease-in-out;
+}
+
+.bar-top,
+.bar-mid,
+.bar-bottom {
+    position: relative;
+
+    height: 3px;
+    width: 20px;
+    border-radius: 2px;
+
+    background-color: white;
+    transition: all .5s ease-in-out;
+}
+
+.bar-top.active {
+    transform: translateY(8px) rotate(45deg);
+
+}
+
+.bar-mid.active {
+    width: 0;
+    opacity: 0;
+}
+
+.bar-bottom.active {
+    transform: translateY(-8px) rotate(-45deg)
+}
+
+.hamburger-menu.active:hover {
+    background-color: var(--color-red);
+}
+
+/* - - - - END NAVIGATION - - - - */
+
+/* - - - - MAIN - - - - */
+.main-container {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+}
+
+.image-container {
+    width: 100%;
+    height: 100vh;
+
+    background-image: linear-gradient(180deg, #04293A 12%, rgba(4, 41, 58, 0.4) 40.1%, #04293A 85%), url(/assets/img/eberhard-grossgasteiger-ofxFTUWoHNY-unsplash_S.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.name-container {
+    position: absolute;
+    top: 35vh;
+
+    padding: 20px;
+
+    font-family: var(--title-font);
+    font-size: 60px;
+    line-height: 110px;
+    letter-spacing: 2px;
+    text-align: center;
+
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: .1px;
+    -webkit-text-stroke-color: var(--color-full-yellow);
+
+    color: rgba(4, 41, 58, 0);
+}
+
+/* - - - - END MAIN - - - - */
 
 /* - - - - PORTFOLIO - - - - */
+.demo {
+    height: 1000vh;
+}
+
 /* - - - - END PORTFOLIO - - - - */
 
 /* - - - - ABOUT - - - - */
