--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 	--color-light-yellow: #ECDBBA;
 	--color-full-yellow: #ECB356;
 	--color-red: #C84B31;
+	--color-logo-blue: #0057FF;
 
 	--title-font: 'Bebas Neue', cursive;
 	--subtitle-font: 'Playfair Display', serif;
@@ -110,7 +111,7 @@ body {
 
 	border-radius: 2px;
 
-	background-color: #0057FF;
+	background-color: var(--color-logo-blue);
 }
 
 .navigation-container {
@@ -121,9 +122,13 @@ body {
 	height: 100vh;
 
 	padding: 10px 10px;
+	border: 1px solid rgba(255, 255, 255, 0.1);
+	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
-	transform: translateX(-266px);
-	background-color: var(--color-light-yellow);
+	transform: translateX(-265px);
+	background-color: rgba(236, 219, 186, 0.6);
+	backdrop-filter: blur(5px);
+	-webkit-backdrop-filter: blur(5px);
 
 	transition: transform .5s ease-in;
 }
@@ -183,7 +188,6 @@ body {
 
 .bar-top.active {
 	transform: translateY(8px) rotate(45deg);
-
 }
 
 .bar-mid.active {
@@ -203,7 +207,6 @@ body {
 
 /* - - - - MAIN - - - - */
 .main-container {
-	position: absolute;
 	width: 100%;
 	height: 100vh;
 }
@@ -293,23 +296,100 @@ body {
 	}
 }
 
-.bottom-transition {
-	position: absolute;
-	width: 100%;
-	height: 60vh;
-	background-color: #C84B31;
-}
-
 /* - - - - END MAIN - - - - */
 
 /* - - - - PORTFOLIO - - - - */
-.demo {
-	height: 1000vh;
+
+.title-container {
+	position: relative;
+	width: 100%;
+
+	text-align: center;
+	font-family: var(--title-font);
+}
+
+.title-front {
+	position: relative;
+	top: -73px;
+
+	font-size: 50px;
+	font-weight: 700;
+	letter-spacing: 3px;
+	color: var(--color-full-yellow);
+}
+
+.title-back {
+
+	font-weight: 700;
+	font-size: 70px;
+	letter-spacing: 8px;
+
+	-webkit-text-fill-color: transparent;
+	-webkit-text-stroke: .01px rgba(255, 255, 255, .1);
+}
+
+.personal-container {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 46px;
+
+	width: 100%;
+}
+
+.profile-image {
+	position: relative;
+
+	width: 100%;
+	height: 237px;
+
+	padding: 0 15px;
+
+	background-color: #C84B31;
+}
+
+.image-name {
+	transform: rotate(-90deg);
+
+	font-family: var(--subtitle-font);
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 48px;
+
+	letter-spacing: 0.06em;
+
+	-webkit-text-fill-color: transparent;
+	-webkit-text-stroke: 1px var(--color-full-yellow);
+}
+
+.image-name:first-child {
+	position: absolute;
+	right: -40px;
+	bottom: 30px;
+}
+
+.image-name:last-child {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+}
+
+.itroduction-text {
+	padding: 0 15px;
+
+	font-family: var(--body-font);
+	font-weight: 200;
+	font-size: 14px;
+	line-height: 22px;
+
+	letter-spacing: 0.05em;
+
+	color: white;
 }
 
 /* - - - - END PORTFOLIO - - - - */
 
 /* - - - - ABOUT - - - - */
+
 /* - - - - END ABOUT - - - - */
 
 /* - - - - CONTACT - - - - */
@@ -317,3 +397,6 @@ body {
 
 /* - - - - FOOTER - - - - */
 /* - - - - END FOOTER - - - - */
+.demo {
+	height: 1000vh;
+}
