--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,7 +373,7 @@ body {
 	bottom: 0;
 }
 
-.itroduction-text {
+.introduction-text {
 	padding: 0 15px;
 
 	font-family: var(--body-font);
@@ -384,6 +384,227 @@ body {
 	letter-spacing: 0.05em;
 
 	color: white;
+}
+
+.skills-container {
+	max-width: 615px;
+
+	display: flex;
+	flex-wrap: wrap;
+	gap: 27px;
+	justify-content: center;
+
+	margin: 100px auto 0;
+	padding: 0 15px;
+}
+
+.skill-container {
+	display: flex;
+	flex-direction: column;
+
+	width: 80px;
+
+	margin-bottom: 27px;
+}
+
+.skill-container:hover .skill-name {
+	opacity: 1;
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+.skill-container:hover .skill-icon {
+	color: rgb(255, 255, 255);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+.skill-container:hover .xp-level {
+	height: 6px;
+	background-color: var(--color-full-yellow);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+.skill-container:hover .reference-bar {
+	background-color: rgb(255, 255, 255);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+
+.skill-name {
+	opacity: 0;
+
+	margin-bottom: 6px;
+
+	text-align: center;
+
+	font-family: var(--body-font);
+	font-size: 8px;
+	font-weight: 700;
+	color: white;
+}
+
+.skill-icon {
+	margin-bottom: 14px;
+	text-align: center;
+	font-size: 50px;
+	color: rgba(255, 255, 255, .3);
+}
+
+.xp-level {
+	width: 50%;
+	height: 1px;
+
+	margin-bottom: 1px;
+
+	background-color: var(--color-light-yellow);
+}
+
+.reference-bar {
+	width: 100%;
+	height: 1px;
+
+	background-color: rgba(255, 255, 255, .3);
+}
+
+.html-knowlege {
+	width: 70%;
+}
+
+.css-knowlege {
+	width: 65%;
+}
+
+.scss-knowlege {
+	width: 60%;
+}
+
+.bootstrap-knowlege {
+	width: 45%;
+}
+
+.js-knowlege {
+	width: 50%;
+}
+
+.react-knowlege {
+	width: 40%;
+}
+
+.design-container {
+	width: 100%;
+	background-color: var(--color-dark-blue);
+
+	padding: 40px 15px;
+}
+
+.design {
+	margin: 0 auto;
+}
+
+.skill-container:hover .design-skill-name {
+	font-weight: 700;
+	text-transform: uppercase;
+	color: rgb(255, 255, 255);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+
+.design-skill-name {
+	margin-bottom: 10px;
+
+	font-family: var(--body-font);
+	font-size: 9.5px;
+	font-weight: 500;
+
+	color: rgba(255, 255, 255, .3);
+}
+
+.photoshop-knowlege {
+	width: 65%;
+}
+
+.illustrator-knowlege {
+	width: 75%;
+}
+
+.indesign-knowlege {
+	width: 80%;
+}
+
+.premierepro-knowlege {
+	width: 55%;
+}
+
+.aftereffects-knowlege {
+	width: 45%;
+}
+
+.dsmax-knowlege {
+	width: 40%;
+}
+
+.behance-link {
+	max-width: 300px;
+	width: 100%;
+	height: 50px;
+
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+
+	margin-top: 25px;
+	border: 2px solid rgba(255, 255, 255, .3);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+.behance-link:hover {
+	height: 56px;
+	border-left: none;
+	border-top: none;
+	border-right: none;
+	border-bottom: 6px solid var(--color-full-yellow);
+
+	background-color: var(--color-light-yellow);
+}
+
+.behance-link:hover .behance-text {
+	color: var(--color-hover-text);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+.behance-link:hover .fa-square-behance {
+	display: block;
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+.behance-text {
+	width: 180px;
+	text-align: center;
+	font-family: var(--body-font);
+	font-size: 16px;
+	font-weight: 500;
+	color: rgba(255, 255, 255, .3);
+}
+
+.fa-square-behance {
+	display: none;
+	font-size: 30px;
+	color: var(--color-hover-text);
 }
 
 /* - - - - END PORTFOLIO - - - - */
