--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,9 @@ body {
 
 	width: 32px;
 	height: 32px;
+
+	cursor: pointer;
+
 	transition: all .5s ease-in-out;
 }
 
@@ -300,6 +303,10 @@ body {
 
 /* - - - - PORTFOLIO - - - - */
 
+/* - - - - END PORTFOLIO - - - - */
+
+/* - - - - ABOUT - - - - */
+
 .title-container {
 	position: relative;
 	width: 100%;
@@ -387,7 +394,7 @@ body {
 }
 
 .skills-container {
-	max-width: 615px;
+	max-width: 650px;
 
 	display: flex;
 	flex-wrap: wrap;
@@ -405,6 +412,8 @@ body {
 	width: 80px;
 
 	margin-bottom: 27px;
+
+	cursor: pointer;
 }
 
 .skill-container:hover .skill-name {
@@ -501,7 +510,7 @@ body {
 	width: 100%;
 	background-color: var(--color-dark-blue);
 
-	padding: 40px 15px;
+	padding: 40px 0;
 }
 
 .design {
@@ -554,14 +563,14 @@ body {
 
 .behance-link {
 	max-width: 300px;
-	width: 100%;
+	width: 90%;
 	height: 50px;
 
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
 
-	margin-top: 25px;
+	margin: 25px auto 0;
 	border: 2px solid rgba(255, 255, 255, .3);
 
 	transition-duration: .3s;
@@ -585,6 +594,10 @@ body {
 	transition-delay: .1s;
 }
 
+.fa-square-behance {
+	display: none;
+}
+
 .behance-link:hover .fa-square-behance {
 	display: block;
 
@@ -595,6 +608,7 @@ body {
 .behance-text {
 	width: 180px;
 	text-align: center;
+
 	font-family: var(--body-font);
 	font-size: 16px;
 	font-weight: 500;
@@ -607,13 +621,116 @@ body {
 	color: var(--color-hover-text);
 }
 
-/* - - - - END PORTFOLIO - - - - */
-
-/* - - - - ABOUT - - - - */
-
 /* - - - - END ABOUT - - - - */
 
 /* - - - - CONTACT - - - - */
+
+.footer-container {
+	width: 100%;
+
+	background-image: linear-gradient(180deg, #04293A 12%, rgba(4, 41, 58, 0.4) 40.1%, #04293A 85%), url(/assets/img/jason-blackeye-FzURx0rFhUk-unsplash_S.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-attachment: fixed;
+}
+
+.contact-form-group {
+	position: relative;
+
+	margin: 0 auto;
+	padding: 70px 15px;
+
+	max-width: 755px;
+	width: 100%;
+
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	gap: 20px;
+}
+
+.sender-data-container {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 20px;
+}
+
+.sender-data {
+	max-width: 352px;
+	width: 100%;
+	height: 40px;
+
+	font-family: var(--body-font);
+	font-size: 14px;
+	font-weight: 300;
+	letter-spacing: 0.02em;
+	color: white;
+
+	border: 1px solid rgba(255, 255, 255, 0);
+
+	padding-inline: 12px;
+	background-color: var(--color-light-blue);
+}
+
+#message:hover,
+.sender-data:hover {
+	border: 1px solid rgba(255, 255, 255, .3);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+#message:focus,
+.sender-data:focus {
+	font-weight: 400;
+	color: var(--color-hover-text);
+	background-color: var(--color-light-yellow);
+
+	border-left: none;
+	border-top: none;
+	border-right: none;
+	border-bottom: 6px solid var(--color-full-yellow);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+#message {
+	width: 100%;
+
+	font-family: var(--body-font);
+	font-size: 14px;
+	font-weight: 300;
+	letter-spacing: 0.02em;
+	color: white;
+
+	border: 1px solid rgba(255, 255, 255, 0);
+
+	padding: 12px;
+	background-color: var(--color-light-blue);
+}
+
+#btn-send-message {
+	position: relative;
+	width: 100%;
+	height: 35px;
+
+	font-family: var(--body-font);
+	font-size: 14px;
+	font-weight: 300;
+	letter-spacing: 0.02em;
+	color: rgba(255, 255, 255, .3);
+
+	border: 2px solid rgba(255, 255, 255, .3);
+	background-color: rgba(6, 70, 99, .3);
+}
+
+
 /* - - - - END CONTACT - - - - */
 
 /* - - - - FOOTER - - - - */
