--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,6 +310,9 @@ body {
 .title-container {
 	position: relative;
 	width: 100%;
+	height: 84px;
+
+	margin-top: 70px;
 
 	text-align: center;
 	font-family: var(--title-font);
@@ -587,24 +590,6 @@ body {
 	background-color: var(--color-light-yellow);
 }
 
-.behance-link:hover .behance-text {
-	color: var(--color-hover-text);
-
-	transition-duration: .3s;
-	transition-delay: .1s;
-}
-
-.fa-square-behance {
-	display: none;
-}
-
-.behance-link:hover .fa-square-behance {
-	display: block;
-
-	transition-duration: .3s;
-	transition-delay: .1s;
-}
-
 .behance-text {
 	width: 180px;
 	text-align: center;
@@ -615,24 +600,42 @@ body {
 	color: rgba(255, 255, 255, .3);
 }
 
-.fa-square-behance {
+.behance-link:hover .behance-text {
+	color: var(--color-hover-text);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+.btn-behance {
 	display: none;
 	font-size: 30px;
 	color: var(--color-hover-text);
+}
+
+.behance-link:hover .btn-behance {
+	display: block;
+
+	transition-duration: .3s;
+	transition-delay: .1s;
 }
 
 /* - - - - END ABOUT - - - - */
 
 /* - - - - CONTACT - - - - */
 
-.footer-container {
+.contact-container {
 	width: 100%;
 
-	background-image: linear-gradient(180deg, #04293A 12%, rgba(4, 41, 58, 0.4) 40.1%, #04293A 85%), url(/assets/img/jason-blackeye-FzURx0rFhUk-unsplash_S.jpg);
+	background-image: url(/assets/img/jason-blackeye-FzURx0rFhUk-unsplash_S.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-attachment: fixed;
+}
+
+.gradient {
+	background-image: linear-gradient(180deg, #04293A 0%, rgba(4, 41, 58, 0.5) 100%);
 }
 
 .contact-form-group {
@@ -650,6 +653,7 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	gap: 20px;
+
 }
 
 .sender-data-container {
@@ -686,7 +690,8 @@ body {
 }
 
 #message:focus,
-.sender-data:focus {
+.sender-data:focus,
+#btn-send-message:hover {
 	font-weight: 400;
 	color: var(--color-hover-text);
 	background-color: var(--color-light-yellow);
@@ -720,6 +725,11 @@ body {
 	width: 100%;
 	height: 35px;
 
+	display: flex;
+	gap: 30px;
+	justify-content: center;
+	align-items: center;
+
 	font-family: var(--body-font);
 	font-size: 14px;
 	font-weight: 300;
@@ -728,13 +738,105 @@ body {
 
 	border: 2px solid rgba(255, 255, 255, .3);
 	background-color: rgba(6, 70, 99, .3);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
 }
 
+#btn-send-message>i.fa-envelope {
+	display: none;
+
+	color: var(--color-hover-text);
+	font-size: 20px;
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+#btn-send-message:hover {
+	height: 41px;
+
+	font-weight: 400;
+	color: var(--color-hover-text);
+	background-color: var(--color-light-yellow);
+
+	border-left: none;
+	border-top: none;
+	border-right: none;
+	border-bottom: 6px solid var(--color-full-yellow);
+
+}
+
+#btn-send-message:hover .fa-envelope {
+	display: block;
+}
 
 /* - - - - END CONTACT - - - - */
 
 /* - - - - FOOTER - - - - */
-/* - - - - END FOOTER - - - - */
-.demo {
-	height: 1000vh;
+
+.footer {
+	background-color: var(--color-dark-blue);
 }
+
+.footer-container {
+	max-width: 755px;
+	width: 100%;
+
+	display: flex;
+	flex-wrap: nowrap;
+	gap: 40px;
+	justify-content: space-between;
+	align-items: center;
+
+	margin: 0 auto;
+	padding: 33px 15px;
+}
+
+.footer-right {
+	position: relative;
+	bottom: 7px;
+
+	width: 100%;
+	display: flex;
+	gap: 14px;
+	justify-content: space-between;
+
+	align-items: center;
+
+	padding: 0 8px 2px;
+	border-bottom: 1px solid rgba(255, 255, 255, .3);
+}
+
+.footer-links {
+	display: flex;
+	flex-wrap: nowrap;
+	gap: 14px;
+
+	font-size: 25px;
+	color: rgba(255, 255, 255, .3);
+}
+
+.footer-link {
+	position: relative;
+	bottom: 0;
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+.footer-link:hover {
+	bottom: 2px;
+	color: white;
+}
+
+.rights {
+	font-family: var(--body-font);
+	font-size: 8px;
+	font-weight: 300;
+
+	justify-self: flex-end;
+	color: white;
+}
+
+/* - - - - END FOOTER - - - - */
