--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,7 +248,7 @@ body {
 
 .forward-icon-container {
 	position: relative;
-	bottom: 10%;
+	bottom: 20%;
 
 	width: 30px;
 	height: 55px;
@@ -466,13 +466,14 @@ body {
 
 	cursor: pointer;
 
-	transition-duration: .3s;
+	transition-duration: .5s;
 	transition-delay: .1s;
 }
 
 .web {
 	height: 88px;
 }
+
 
 .skill-container:hover {
 	bottom: 5px;
@@ -518,7 +519,7 @@ body {
 
 	background-color: rgba(255, 255, 255, .3);
 
-	transition-duration: .3s;
+	transition-duration: .5s;
 	transition-delay: .1s;
 }
 
@@ -534,14 +535,13 @@ body {
 
 	background-color: var(--color-light-yellow);
 
-	transition-duration: .3s;
+	transition-duration: .5s;
 	transition-delay: .1s;
 }
 
 .skill-container:hover .xp-level {
 	height: 6px;
 	background-color: var(--color-full-yellow);
-
 }
 
 .html-knowlege {
@@ -632,7 +632,6 @@ body {
 	height: 56px;
 
 	display: flex;
-	justify-content: space-evenly;
 	align-items: center;
 
 	margin: 25px auto 0;
@@ -653,30 +652,37 @@ body {
 }
 
 .behance-text {
-	width: 180px;
-	text-align: center;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
 
 	font-family: var(--body-font);
 	font-size: 16px;
 	font-weight: 500;
 	color: rgba(255, 255, 255, .3);
 
-	transition-duration: .3s;
+	transition-duration: .5s;
 	transition-delay: .1s;
 }
 
 .behance-link:hover .behance-text {
+	left: 55%;
 	color: var(--color-hover-text);
 }
 
 .btn-behance {
-	display: none;
+	position: absolute;
+	left: 15%;
+	transform: translateX(-50%);
+
+	opacity: 0;
 	font-size: 30px;
 	color: var(--color-hover-text);
 }
 
 .behance-link:hover .btn-behance {
-	display: block;
+	opacity: 1;
+	left: 18%;
 
 	transition-duration: .3s;
 	transition-delay: .1s;
@@ -787,29 +793,8 @@ body {
 	width: 100%;
 	height: 41px;
 
-	display: flex;
-	gap: 30px;
-	justify-content: center;
-	align-items: center;
-
-	font-family: var(--body-font);
-	font-size: 14px;
-	font-weight: 300;
-	letter-spacing: 0.02em;
-	color: rgba(255, 255, 255, .3);
-
 	border: 2px solid rgba(255, 255, 255, .3);
 	background-color: rgba(6, 70, 99, .3);
-
-	transition-duration: .3s;
-	transition-delay: .1s;
-}
-
-#btn-send-message>i.fa-envelope {
-	display: none;
-
-	color: var(--color-hover-text);
-	font-size: 20px;
 
 	transition-duration: .3s;
 	transition-delay: .1s;
@@ -818,19 +803,56 @@ body {
 #btn-send-message:hover {
 	height: 41px;
 
-	font-weight: 400;
-	color: var(--color-hover-text);
 	background-color: var(--color-light-yellow);
 
 	border-left: none;
 	border-top: none;
 	border-right: none;
 	border-bottom: 6px solid var(--color-full-yellow);
+}
 
+.btn-send-text {
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	font-family: var(--body-font);
+	font-size: 14px;
+	font-weight: 300;
+	letter-spacing: 0.02em;
+	color: rgba(255, 255, 255, .3);
+
+	transition-duration: .5s;
+	transition-delay: .1s;
+}
+
+#btn-send-message:hover .btn-send-text {
+	left: 55%;
+
+	font-weight: 400;
+	color: var(--color-hover-text);
+}
+
+#btn-send-message>i.fa-envelope {
+	position: absolute;
+	left: 10%;
+	transform: translate(-50%, -50%);
+
+	opacity: 0;
+
+	color: var(--color-hover-text);
+	font-size: 20px;
+
+	transition-duration: .3s;
+	transition-delay: .1s;
 }
 
 #btn-send-message:hover .fa-envelope {
-	display: block;
+	opacity: 1;
+	left: 14%;
+
+	transition-duration: .3s;
+	transition-delay: .1s;
 }
 
 /* - - - - END CONTACT - - - - */
