Migrate skills section to JS file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -544,27 +544,27 @@ body {
 	background-color: var(--color-full-yellow);
 }
 
-.html-knowlege {
+.html-knowledge {
 	width: 70%;
 }
 
-.css-knowlege {
+.css-knowledge {
 	width: 65%;
 }
 
-.scss-knowlege {
+.scss-knowledge {
 	width: 60%;
 }
 
-.bootstrap-knowlege {
+.bootstrap-knowledge {
 	width: 45%;
 }
 
-.js-knowlege {
+.js-knowledge {
 	width: 50%;
 }
 
-.react-knowlege {
+.react-knowledge {
 	width: 40%;
 }
 
@@ -602,27 +602,27 @@ body {
 	color: rgb(255, 255, 255);
 }
 
-.photoshop-knowlege {
+.photoshop-knowledge {
 	width: 65%;
 }
 
-.illustrator-knowlege {
+.illustrator-knowledge {
 	width: 75%;
 }
 
-.indesign-knowlege {
+.indesign-knowledge {
 	width: 80%;
 }
 
-.premierepro-knowlege {
+.premierepro-knowledge {
 	width: 55%;
 }
 
-.aftereffects-knowlege {
+.aftereffects-knowledge {
 	width: 45%;
 }
 
-.dsmax-knowlege {
+.dsmax-knowledge {
 	width: 40%;
 }
 
