--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,24 +310,60 @@ body {
 	margin: 30px auto 0;
 }
 
+.my-swiper {
+	position: relative;
+}
+
 .swiper-slide {
+	position: relative;
 	width: 285px !important;
 	height: 285px !important;
 }
 
-/* 
-.swiper-slide:hover::after {
-	content: "";
+.swiper-overlay {
 	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
 
-	background-color: #C84B31;
-	display: block;
+	background: linear-gradient(180deg, rgba(4, 28, 50, 0.2) 0%, rgba(4, 28, 50, 0.8) 100%);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
 }
- */
+
+.swiper-slide:hover .swiper-overlay {
+	opacity: 1;
+}
+
+.btn-show-more {
+	position: relative;
+	left: 50%;
+	top: 70%;
+	transform: translateX(-50%);
+
+	font-family: var(--body-font);
+	font-size: 14px;
+	font-weight: 400;
+	letter-spacing: 1px;
+	color: white;
+
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	border-radius: 18px;
+	padding: 8px 24px;
+
+	cursor: pointer;
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+.btn-show-more:hover {
+	border: 1px solid rgba(255, 255, 255, .6);
+	border-radius: 0;
+	background-color: rgba(255, 255, 255, .1);
+}
+
 .swiper-slide img {
 	width: 100%;
 	height: 100%;
@@ -627,6 +663,8 @@ body {
 }
 
 .behance-link {
+	position: relative;
+
 	max-width: 300px;
 	width: 90%;
 	height: 56px;
@@ -910,7 +948,8 @@ body {
 }
 
 .footer-link:hover {
-	bottom: 2px;
+	transform: scale(1.15);
+	bottom: 3px;
 	color: white;
 }
 
