--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+/* 
+- contact hover focus problem
+- swiper show more button issue
+- after message sent clear inputs
+*/
+
 /* - - - - VARIABLES - - - - */
 :root {
 	--color-base-blue: #04293A;
@@ -9,6 +15,7 @@
 	--color-full-yellow: #ECB356;
 	--color-red: #C84B31;
 	--color-logo-blue: #0057FF;
+	--color-white: #FFFFFF;
 
 	--title-font: 'Bebas Neue', cursive;
 	--subtitle-font: 'Playfair Display', serif;
@@ -118,14 +125,14 @@ body {
 	position: absolute;
 	top: 70px;
 	left: 0;
-	width: 250px;
+	width: 100vw;
 	height: 100vh;
 
 	padding: 10px 10px;
 	border: 1px solid rgba(255, 255, 255, 0.1);
 	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
-	transform: translateX(-265px);
+	transform: translateX(-100vw);
 	background-color: rgba(236, 219, 186, 0.6);
 	backdrop-filter: blur(5px);
 	-webkit-backdrop-filter: blur(5px);
@@ -142,6 +149,8 @@ body {
 }
 
 .navbar__list {
+	display: flex;
+	flex-direction: column;
 	list-style: none;
 }
 
@@ -149,6 +158,7 @@ body {
 	color: var(--color-hover-text);
 	padding: 20px 0px 8px;
 	border-bottom: 6px solid transparent;
+	text-align: center;
 
 	transition: .35s;
 }
@@ -185,7 +195,7 @@ body {
 	width: 20px;
 	border-radius: 2px;
 
-	background-color: white;
+	background-color: var(--color-white);
 	transition: all .5s ease-in-out;
 }
 
@@ -301,10 +311,46 @@ body {
 
 /* - - - - END MAIN - - - - */
 
+.title-container {
+	position: relative;
+	width: 100%;
+	height: 84px;
+
+	margin-top: 70px;
+
+	text-align: center;
+	font-family: var(--title-font);
+}
+
+.title-front {
+	position: relative;
+	top: -73px;
+
+	font-size: 50px;
+	font-weight: 700;
+	letter-spacing: 3px;
+	color: var(--color-full-yellow);
+}
+
+.title-back {
+
+	font-weight: 700;
+	font-size: 70px;
+	letter-spacing: 8px;
+
+	-webkit-text-fill-color: transparent;
+	-webkit-text-stroke: .01px rgba(255, 255, 255, .1);
+}
+
+.nav-placeholder {
+	width: 100%;
+	height: 1px;
+}
+
 /* - - - - PORTFOLIO - - - - */
 
 .portfolio-container {
-	max-width: 1000px;
+	max-width: 1200px;
 	width: 100%;
 
 	margin: 30px auto 0;
@@ -346,9 +392,7 @@ body {
 	font-size: 14px;
 	font-weight: 400;
 	letter-spacing: 1px;
-	color: white;
-
-	border: 1px solid rgba(255, 255, 255, 0.3);
+	color: var(--color-white) border: 1px solid rgba(255, 255, 255, 0.3);
 	border-radius: 18px;
 	padding: 8px 24px;
 
@@ -359,7 +403,7 @@ body {
 }
 
 .btn-show-more:hover {
-	border: 1px solid rgba(255, 255, 255, .6);
+	border: 1px solid var(--color-light-yellow);
 	border-radius: 0;
 	background-color: rgba(255, 255, 255, .1);
 }
@@ -385,37 +429,6 @@ body {
 
 /* - - - - ABOUT - - - - */
 
-.title-container {
-	position: relative;
-	width: 100%;
-	height: 84px;
-
-	margin-top: 70px;
-
-	text-align: center;
-	font-family: var(--title-font);
-}
-
-.title-front {
-	position: relative;
-	top: -73px;
-
-	font-size: 50px;
-	font-weight: 700;
-	letter-spacing: 3px;
-	color: var(--color-full-yellow);
-}
-
-.title-back {
-
-	font-weight: 700;
-	font-size: 70px;
-	letter-spacing: 8px;
-
-	-webkit-text-fill-color: transparent;
-	-webkit-text-stroke: .01px rgba(255, 255, 255, .1);
-}
-
 .personal-container {
 	position: relative;
 	top: 80px;
@@ -425,6 +438,8 @@ body {
 	gap: 46px;
 
 	width: 100%;
+
+	margin: 0 auto;
 }
 
 .profile-image {
@@ -454,14 +469,14 @@ body {
 
 .image-name:first-child {
 	position: absolute;
-	right: -35px;
-	bottom: 30px;
+	right: 5px;
+	bottom: 0;
 }
 
 .image-name:last-child {
 	position: absolute;
-	right: 5px;
-	bottom: 0;
+	right: -35px;
+	bottom: 30px;
 }
 
 .introduction-text {
@@ -474,18 +489,19 @@ body {
 
 	letter-spacing: 0.05em;
 
-	color: white;
+	color: var(--color-white)
 }
 
 .skills-container {
-	max-width: 650px;
+	/* 	max-width: 650px; */
+	max-width: 425px;
 
 	display: flex;
 	flex-wrap: wrap;
 	gap: 27px;
 	justify-content: center;
 
-	margin: 100px auto 0;
+	margin: 100px auto 20px;
 	padding: 0 15px;
 }
 
@@ -525,9 +541,7 @@ body {
 	font-family: var(--body-font);
 	font-size: 8px;
 	font-weight: 700;
-	color: white;
-
-	transition-duration: .3s;
+	color: var(--color-white) transition-duration: .3s;
 	transition-delay: .1s;
 }
 
@@ -766,12 +780,11 @@ body {
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: space-between;
 	gap: 20px;
 }
 
 .sender-data {
-	max-width: 352px;
 	width: 100%;
 	height: 40px;
 
@@ -779,9 +792,7 @@ body {
 	font-size: 14px;
 	font-weight: 300;
 	letter-spacing: 0.02em;
-	color: white;
-
-	border: 1px solid rgba(255, 255, 255, 0);
+	color: var(--color-white) border: 1px solid rgba(255, 255, 255, 0);
 
 	padding-inline: 12px;
 	background-color: var(--color-light-blue);
@@ -818,9 +829,7 @@ body {
 	font-size: 14px;
 	font-weight: 300;
 	letter-spacing: 0.02em;
-	color: white;
-
-	border: 1px solid rgba(255, 255, 255, 0);
+	color: var(--color-white) border: 1px solid rgba(255, 255, 255, 0);
 
 	padding: 12px;
 	background-color: var(--color-light-blue);
@@ -950,7 +959,7 @@ body {
 .footer-link:hover {
 	transform: scale(1.15);
 	bottom: 3px;
-	color: white;
+	color: var(--color-white)
 }
 
 .rights {
@@ -959,7 +968,139 @@ body {
 	font-weight: 300;
 
 	justify-self: flex-end;
-	color: white;
+	color: var(--color-white)
 }
 
 /* - - - - END FOOTER - - - - */
+
+
+/* - - - - Responsive - - - - */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+	.navigation-container {
+		position: initial;
+		width: initial;
+		height: initial;
+
+		flex-direction: row;
+
+		border: initial;
+		box-shadow: initial;
+
+		transform: initial;
+		background-color: transparent;
+		backdrop-filter: none;
+		-webkit-backdrop-filter: none;
+
+		transition: none;
+	}
+
+	.navbar__list {
+		display: flex;
+		flex-direction: row;
+		gap: 20px;
+	}
+
+	.navbar__list-item {
+		color: var(--color-white);
+		padding: 0;
+		border-bottom: 2px solid transparent;
+
+		font-size: 14px;
+		font-weight: 300;
+	}
+
+	.navbar__list-item:hover {
+		padding-left: 0;
+		border-bottom: 2px solid var(--color-full-yellow);
+	}
+
+	.hamburger-menu {
+		display: none;
+	}
+
+	.image-container {
+		background-image: linear-gradient(180deg, #04293A 12%, rgba(4, 41, 58, 0.4) 40.1%, #04293A 85%), url(/assets/img/eberhard-grossgasteiger-ofxFTUWoHNY-unsplash_M.jpg);
+	}
+
+	.contact-container {
+		background-image: url(/assets/img/jason-blackeye-FzURx0rFhUk-unsplash_M.jpg);
+	}
+
+	.personal-container {
+		width: 60%;
+	}
+
+	.sender-data-container {
+		flex-wrap: nowrap;
+	}
+
+	#btn-send-message {
+		max-width: 240px;
+		align-self: flex-end;
+	}
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+	.personal-container {
+		width: 750px;
+		gap: 0;
+		justify-content: space-around;
+	}
+
+	.profile-image {
+		width: 237px;
+		height: 304px;
+	}
+
+	.image-name:last-child {
+		position: absolute;
+		right: -55px;
+		bottom: 64px;
+	}
+
+	.image-name:first-child {
+		position: absolute;
+		right: -18px;
+		bottom: 29px;
+	}
+
+	.introduction-text {
+		padding: 3% 0 0;
+		max-width: 467px;
+	}
+
+	.skills-container {
+		max-width: 650px;
+	}
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+	.main-container {
+		height: 80vh;
+	}
+
+	.swiper-slide {
+		width: 310px !important;
+		height: 310px !important;
+	}
+
+	.personal-container {
+		justify-content: space-between;
+	}
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+	.image-container {
+		background-image: linear-gradient(180deg, #04293A 12%, rgba(4, 41, 58, 0.4) 40.1%, #04293A 85%), url(/assets/img/eberhard-grossgasteiger-ofxFTUWoHNY-unsplash_L.jpg);
+	}
+
+	.contact-container {
+		background-image: url(/assets/img/jason-blackeye-FzURx0rFhUk-unsplash_L.jpg);
+	}
+}
