--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,5 @@
 /* 
-- contact hover focus problem
 - swiper show more button issue
-- after message sent clear inputs
 */
 
 /* - - - - VARIABLES - - - - */
@@ -57,6 +55,7 @@ textarea {
 }
 
 button,
+input,
 textarea,
 select {
 	appearance: none !important;
@@ -350,15 +349,17 @@ body {
 /* - - - - PORTFOLIO - - - - */
 
 .portfolio-container {
+	background: linear-gradient(180deg, rgba(4, 28, 50, 0) 10%, #041C32 95%);
+}
+
+.my-swiper {
+	position: relative;
 	max-width: 1200px;
 	width: 100%;
 
 	margin: 30px auto 0;
 }
 
-.my-swiper {
-	position: relative;
-}
 
 .swiper-slide {
 	position: relative;
@@ -392,7 +393,9 @@ body {
 	font-size: 14px;
 	font-weight: 400;
 	letter-spacing: 1px;
-	color: var(--color-white) border: 1px solid rgba(255, 255, 255, 0.3);
+	color: var(--color-white);
+
+	border: 1px solid rgba(255, 255, 255, 0.3);
 	border-radius: 18px;
 	padding: 8px 24px;
 
@@ -424,6 +427,118 @@ body {
 .swiper-pagination-bullet-active-prev-prev {
 	background-color: var(--color-full-yellow) !important;
 }
+
+.portfolio-details {
+	position: relative;
+	display: block;
+	padding: 30px 10px;
+
+	background-color: var(--color-dark-blue);
+	color: var(--color-white);
+}
+
+.portfolio-details-container {
+	max-width: 750px;
+	width: 100%;
+
+	margin: 0 auto;
+}
+
+.project-title {
+	font-family: var(--subtitle-font);
+	font-size: 26px;
+	font-weight: 900;
+
+	margin-bottom: 30px;
+}
+
+.project-details-describe {
+	font-family: var(--body-font);
+	font-size: 16px;
+	font-weight: 200;
+	line-height: 24px;
+
+	margin-bottom: 30px;
+	padding-left: 24px;
+}
+
+.project-button-container {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 15px;
+
+
+	width: 100%;
+	padding: 0 24px;
+}
+
+.btn-project {
+	position: relative;
+	width: 100%;
+	height: 40px;
+
+	border: 2px solid rgba(255, 255, 255, .3);
+
+	font-family: var(--body-font);
+	font-size: 14px;
+	font-weight: 200;
+}
+
+.btn-project:hover {
+	background-color: var(--color-light-yellow);
+	border-left: none;
+	border-top: none;
+	border-right: none;
+	border-bottom: 6px solid var(--color-full-yellow);
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+.project-btn-text {
+	width: 100%;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+
+	text-align: center;
+	opacity: .3;
+
+	transition-duration: .5s;
+	transition-delay: .1s;
+}
+
+.btn-project:hover .project-btn-text {
+	left: 55%;
+	color: var(--color-hover-text);
+	font-weight: 500;
+	opacity: 1;
+}
+
+.fa-circle-arrow-right,
+.fa-github {
+	position: absolute;
+	left: 15%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+
+	font-size: 20px;
+	color: var(--color-hover-text);
+
+	opacity: 0;
+}
+
+.btn-project:hover .fa-circle-arrow-right,
+.btn-project:hover .fa-github {
+	opacity: 1;
+	left: 18%;
+
+	transition-duration: .3s;
+	transition-delay: .1s;
+}
+
+
 
 /* - - - - END PORTFOLIO - - - - */
 
@@ -489,11 +604,10 @@ body {
 
 	letter-spacing: 0.05em;
 
-	color: var(--color-white)
+	color: var(--color-white);
 }
 
 .skills-container {
-	/* 	max-width: 650px; */
 	max-width: 425px;
 
 	display: flex;
@@ -541,7 +655,9 @@ body {
 	font-family: var(--body-font);
 	font-size: 8px;
 	font-weight: 700;
-	color: var(--color-white) transition-duration: .3s;
+	color: var(--color-white);
+
+	transition-duration: .3s;
 	transition-delay: .1s;
 }
 
@@ -792,7 +908,8 @@ body {
 	font-size: 14px;
 	font-weight: 300;
 	letter-spacing: 0.02em;
-	color: var(--color-white) border: 1px solid rgba(255, 255, 255, 0);
+	color: var(--color-white);
+	border: 1px solid rgba(255, 255, 255, 0);
 
 	padding-inline: 12px;
 	background-color: var(--color-light-blue);
@@ -829,7 +946,8 @@ body {
 	font-size: 14px;
 	font-weight: 300;
 	letter-spacing: 0.02em;
-	color: var(--color-white) border: 1px solid rgba(255, 255, 255, 0);
+	color: var(--color-white);
+	border: 1px solid rgba(255, 255, 255, 0);
 
 	padding: 12px;
 	background-color: var(--color-light-blue);
@@ -959,7 +1077,7 @@ body {
 .footer-link:hover {
 	transform: scale(1.15);
 	bottom: 3px;
-	color: var(--color-white)
+	color: var(--color-white);
 }
 
 .rights {
@@ -968,7 +1086,7 @@ body {
 	font-weight: 300;
 
 	justify-self: flex-end;
-	color: var(--color-white)
+	color: var(--color-white);
 }
 
 /* - - - - END FOOTER - - - - */
@@ -1043,7 +1161,18 @@ body {
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
+
+@media only screen and (min-width: 583px) {
+	.btn-project {
+		width: 250px;
+	}
+}
+
 @media only screen and (min-width: 768px) {
+	.project-button-container {
+		gap: 30px;
+	}
+
 	.personal-container {
 		width: 750px;
 		gap: 0;
@@ -1087,6 +1216,10 @@ body {
 	.swiper-slide {
 		width: 310px !important;
 		height: 310px !important;
+	}
+
+	.project-button-container {
+		padding: 0;
 	}
 
 	.personal-container {
