--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,7 +387,7 @@ body {
 }
 
 .swiper-slide-active {
-	transform: scale(1.2) !important;
+	border-top: 3px solid var(--color-full-yellow);
 	z-index: 2
 }
 
@@ -407,38 +407,12 @@ body {
 	opacity: .2;
 }
 
-.btn-show-more {
-	position: relative;
-	left: 50%;
-	top: 70%;
-	transform: translateX(-50%);
-
-	font-family: var(--body-font);
-	font-size: 14px;
-	font-weight: 400;
-	letter-spacing: 1px;
-	color: var(--color-white);
-
-	border: 1px solid rgba(255, 255, 255, 0.3);
-	border-radius: 18px;
-	padding: 8px 24px;
-
-	cursor: pointer;
-
-	transition-duration: .3s;
-	transition-delay: .1s;
-}
-
-.btn-show-more:hover {
-	border: 1px solid var(--color-light-yellow);
-	border-radius: 0;
-	background-color: rgba(255, 255, 255, .1);
-}
-
 .swiper-slide img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	background-position: center top;
+
 }
 
 .swiper-pagination-bullet-active {
