--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,6 +265,8 @@ body {
 	-webkit-text-stroke: 0.001px var(--color-full-yellow);
 
 	color: rgba(4, 41, 58, 0);
+
+	z-index: 99999;
 }
 
 .forward-icon-container {
