--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,7 +302,7 @@ body {
 	transition-delay: .1s;
 }
 
-.fa-sort-down:hover {
+.fa-sort-down.fa-sort-down:hover {
 	animation: down-forward .8s ease-in infinite;
 	filter: drop-shadow(0 0 4px #fff);
 }
@@ -486,6 +486,7 @@ body {
 	height: 40px;
 
 	border: 2px solid rgba(255, 255, 255, .3);
+	background-color: rgba(255, 255, 255, 0.03);
 
 	font-family: var(--body-font);
 	font-size: 14px;
@@ -832,6 +833,8 @@ body {
 
 	margin: 25px auto 0;
 	border: 2px solid rgba(255, 255, 255, .3);
+	background-color: rgba(255, 255, 255, 0.03);
+
 
 	transition-duration: .3s;
 	transition-delay: .1s;
@@ -987,7 +990,7 @@ body {
 	height: 41px;
 
 	border: 2px solid rgba(255, 255, 255, .3);
-	background-color: rgba(6, 70, 99, .3);
+	background-color: rgba(6, 70, 99, .5);
 
 	transition-duration: .3s;
 	transition-delay: .1s;
@@ -1054,6 +1057,7 @@ body {
 
 .footer {
 	background-color: var(--color-dark-blue);
+	box-shadow: 0 10px 50px rgba(0, 0, 0, 0.5);
 }
 
 .footer-container {
