--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,9 +392,10 @@ body {
 
 .swiper-overlay {
 	position: absolute;
+
 	width: 100%;
 	height: 100%;
-	opacity: .7;
+	opacity: .5;
 
 	background: linear-gradient(180deg, rgba(4, 28, 50, 0.2) 0%, rgba(4, 28, 50, 0.8) 100%);
 
@@ -403,7 +404,7 @@ body {
 }
 
 .swiper-slide:hover .swiper-overlay {
-	opacity: .2;
+	opacity: 1;
 }
 
 .swiper-slide img {
